Styles/styles.css
.container {
    opacity: .95;
    background-color: #343a40;
}

.intro{
    margin-top: 100px;
}

.myInfo{
    margin-top: 25px;
}

.navbar {
    margin-bottom: 20px;
}

body{
background-image: url(../Assets/Images/background2.jpg);
background-size: cover;
background-attachment: fixed;
}

span {
    margin-left: 50%;
    margin-right: 50%;
}

.card {
    margin-bottom: 30px;
    margin: 0 auto;
    min-width: 45%;
    text-align:justify;
}

.footer{
    background-color: black;
    color: white;
}

.logo{
    height: 50px;
}

.navbar .navbar-expand-sm .navbar-dark .bg-dark{
    height: 100px;
}

.profileImg{
    max-height: 200px;
    margin-top: 15px;   
    border-radius: 50%;
}

.slogan{
    color: #fff952;
    font-weight: bolder;
    font-size: 50px;
}

.portfolioHeader{
    color: #fff952;
    font-weight: bolder;
    font-size: 50px;
    margin-bottom: 0px;
}

#bottom{
    margin-bottom: 0px;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  height: 100px;
  width: 100px;
  background-size: 100%, 100%;
  border-radius: 50%;
  background-image: none;
}

.carousel-control-next-icon:after
{
  content: '>';
  font-size: 55px;
  color: #fff952;
}

.carousel-control-prev-icon:after {
  content: '<';
  font-size: 55px;
  color: #fff952;
}

#carouselExampleIndicators{
    padding-bottom: 25px;
    padding-top: 25px;
}

.portfolio{
    margin-top: 25px;
    margin-bottom: 100px;
}

.aboutMe{
    padding: 5px;
    max-width: 501.67px;
    color: #fff952;
    text-align: justify;
}

i{
    font-size: 30px;
    color: #fff952;
}

em {
    font-size: 65px;
}

